<resources>
    <string name="app_name">EatItServer</string>
    <string name="signUp">Sign Up</string>
    <string name="signIn">Sign In</string>
    <string name="phoneNumber">Phone Number</string>
    <string name="password">Password</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="name">Name</string>
    <string name="select">SELECT</string>
    <string name="upload">UPLOAD</string>
    <string name="description">Description</string>
    <string name="price">Price</string>
    <string name="discount">Discount</string>
    <string name="new_password">New Password</string>
    <string name="repeat_password">Repeat Password</string>

</resources>
